--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
+    "csurf": "^1.11.0",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
+    "heroku-ssl-redirect": "^0.1.1",
+    "knex": "^2.3.0",
     "remult": "^0.16.0",
     "rxjs": "~7.5.0",
+    "tedious": "^15.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,6 +37,10 @@
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cookie-session": "^2.0.44",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/jasmine": "~4.0.0",
     "concurrently": "^7.3.0",
